--- a/app/src/main/res/layout/activity_section_b_form3.xml
+++ b/app/src/main/res/layout/activity_section_b_form3.xml
@@ -22,7 +22,7 @@
                 style="@style/linearlayout_view_wt_bound">
 
                 <!-- kf3b02-->
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/fldGrpCVkf3b02"
                     style="@style/cardViews">
 
@@ -62,7 +62,7 @@
 
                     </LinearLayout>
 
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
                 <LinearLayout
                     android:id="@+id/fldGrpSecB03"
@@ -72,7 +72,7 @@
                     android:visibility='@{kf3b02a.checked? View.VISIBLE : View.GONE}'>
 
                     <!-- kf3b03-->
-                    <android.support.v7.widget.CardView
+                    <androidx.cardview.widget.CardView
                         android:id="@+id/fldGrpCVkf3b03"
                         style="@style/cardViews">
 
@@ -105,7 +105,7 @@
 
                         </LinearLayout>
 
-                    </android.support.v7.widget.CardView>
+                    </androidx.cardview.widget.CardView>
 
                     <LinearLayout
                         android:id="@+id/fldGrpSecB04"
@@ -116,7 +116,7 @@
 
 
                         <!-- kf3b04-->
-                        <android.support.v7.widget.CardView
+                        <androidx.cardview.widget.CardView
                             android:id="@+id/fldGrpCVkf3b04"
                             style="@style/cardViews">
 
@@ -189,11 +189,11 @@
 
                             </LinearLayout>
 
-                        </android.support.v7.widget.CardView>
+                        </androidx.cardview.widget.CardView>
 
 
                         <!-- kf3b05-->
-                        <android.support.v7.widget.CardView
+                        <androidx.cardview.widget.CardView
                             android:id="@+id/fldGrpCVkf3b05"
                             style="@style/cardViews">
 
@@ -243,11 +243,11 @@
 
                             </LinearLayout>
 
-                        </android.support.v7.widget.CardView>
+                        </androidx.cardview.widget.CardView>
 
 
                         <!-- kf3b06-->
-                        <android.support.v7.widget.CardView
+                        <androidx.cardview.widget.CardView
                             android:id="@+id/fldGrpCVkf3b06"
                             style="@style/cardViews">
 
@@ -299,7 +299,7 @@
 
                             </LinearLayout>
 
-                        </android.support.v7.widget.CardView>
+                        </androidx.cardview.widget.CardView>
 
 
                     </LinearLayout>
